# pokerth

./: .dockerignore  .gitignore  BOT_CLIENT_README.txt  CMakeLists.txt  ChangeLog  Dockerfile  INSTALL  Makefile.pokerth_qml-client  TEST_USERS_SECURITY.txt  build_macos.sh  clean_build.sh  create_serverlist.sh  download_cards.py  generate_cards.py  pokerth.desktop  pokerth.lua  pokerth.pro  pokerth_db.pro  pokerth_dbofficial.pro  pokerth_game.pro  pokerth_lib.pro  pokerth_qml-client  pokerth_qml-client.pro  pokerth_qml.desktop  pokerth_server.pro  serverlist_example.xml  test_with_bots.sh
src/: CMakeLists.txt  connectivity.cpp  game_defs.h  load.cpp  playerdata.cpp  pokerth.cpp  pokerth_bot.cpp  pokerth_server.cpp  serverdata.h  session.cpp  session.h  zlib_compress.cpp
src/chatcleaner/: CMakeLists.txt  capsfloodcheck.cpp  cleanerconfig.cpp  cleanerserver.cpp  letterrepeatingcheck.cpp  messagefilter.cpp
src/config/: configfile.cpp  configfile.h
src/core/: appimage_utils.h  avatarmanager.cpp  crypthelper.cpp  loghelper_server.cpp  openssl_wrapper.h  pokerthexception.cpp
src/core/qttools/qthelper/: qthelper.cpp
src/db/: serverdbfactory.h  serverdbfactorygeneric.h  serverdbgeneric.h
src/db/common/: serverdbfactorygeneric.cpp  serverdbgeneric.cpp
src/dbofficial/: CMakeLists.txt  asyncdbadminplayers.cpp  asyncdbadminplayers.h  asyncdbauth.cpp  asyncdbauth.h  asyncdbavatarblacklist.cpp  asyncdbavatarblacklist.h  asyncdbblockplayer.cpp  asyncdbblockplayer.h  asyncdbcreategame.cpp  asyncdbcreategame.h  asyncdbendgame.cpp  asyncdbendgame.h  asyncdbgameplace.cpp  asyncdbgameplace.h  asyncdblogin.cpp  asyncdblogin.h  asyncdbplayerlastgames.cpp  asyncdbplayerlastgames.h  asyncdbquery.h  asyncdbreportavatar.cpp  asyncdbreportavatar.h  asyncdbreportgame.cpp  asyncdbreportgame.h  asyncdbupdatescore.cpp  asyncdbupdatescore.h  compositeasyncdbquery.cpp  compositeasyncdbquery.h  mysqlpp_compat.h  serverdbfactoryinternal.cpp  serverdbfactoryinternal.h  serverdbthread.cpp  serverdbthread.h
src/engine/: game.cpp  log.cpp  log.h
src/engine/local_engine/: localboard.cpp  localhand.cpp  tools.cpp  tools_android.cpp
src/engine/network_engine/: clientboard.cpp  clienthand.cpp
src/gui/: guiinterface.h
src/gui/generic/: serverguiwrapper.cpp  serverguiwrapper.h
src/gui/qt/: CMakeLists.txt  aboutpokerth.ui  androidlineedit.cpp  androidlineedit.h  gamelobbydialog.ui  gametable.ui  guiwrapper.cpp  guiwrapper.h  mobileinputhelper.cpp  mobileinputhelper.h  settingsdialog.ui
src/gui/qt/aboutpokerth/: aboutpokerthimpl.cpp
src/gui/qt/android/: AndroidManifest.xml
src/gui/qt/changecompleteblindsdialog/: changecompleteblindsdialogimpl.cpp  changecompleteblindsdialogimpl.h
src/gui/qt/changecontentdialog/: changecontentdialogimpl.cpp  changecontentdialogimpl.h
src/gui/qt/chattools/: chattools.cpp  chattools.h  emojipicker.cpp  emojipicker.h
src/gui/qt/connecttoserverdialog/: connecttoserverdialogimpl.cpp
src/gui/qt/createinternetgamedialog/: createinternetgamedialogimpl.cpp  createinternetgamedialogimpl.h
src/gui/qt/createnetworkgamedialog/: createnetworkgamedialogimpl.cpp  createnetworkgamedialogimpl.h
src/gui/qt/gamelobbydialog/: gamelobbydialogimpl.cpp  gamelobbydialogimpl.h  mygamelistsortfilterproxymodel.h  mygamelisttreewidget.h
src/gui/qt/gametable/: gametableimpl.cpp  gametableimpl.h  myactionbutton.h  myavatarlabel.cpp  myavatarlabel.h  mycardspixmaplabel.cpp  mycardspixmaplabel.h  mycashlabel.cpp  mycashlabel.h  mychancelabel.h  mylefttabwidget.h  mynamelabel.cpp  mynamelabel.h  myrighttabwidget.h  mysetlabel.h  myslider.cpp  myslider.h  mystatuslabel.h  mytimeoutlabel.h  reactionfx.cpp  reactionfx.h
src/gui/qt/gui_800x480/: aboutpokerth_800x480.ui  changecompleteblindsdialog_800x480.ui  changecontentdialog_800x480.ui  connecttoserverdialog_800x480.ui  createinternetgamedialog_800x480.ui  createnetworkgamedialog_800x480.ui  gamelobbydialog_800x480.ui  gametable_800x480.ui  internetgamelogindialog_800x480.ui  joinnetworkgamedialog_800x480.ui  logfiledialog_800x480.ui  manualblindsorderdialog_800x480.ui  mymessagedialog_800x480.ui  newgamedialog_800x480.ui  selectavatardialog_800x480.ui  serverlistdialog_800x480.ui  settingsdialog_800x480.ui  startnetworkgamedialog_800x480.ui  startwindow_800x480.ui  tabs_800x480.ui
src/gui/qt/internetgamelogindialog/: internetgamelogindialogimpl.cpp  internetgamelogindialogimpl.h
src/gui/qt/joinnetworkgamedialog/: joinnetworkgamedialogimpl.cpp  joinnetworkgamedialogimpl.h
src/gui/qt/logfiledialog/: logfiledialog.cpp  logfiledialog.h
src/gui/qt/mymessagedialog/: mymessagedialogimpl.cpp  mymessagedialogimpl.h
src/gui/qt/newlocalgamedialog/: newgamedialogimpl.cpp  newgamedialogimpl.h
src/gui/qt/qttools/: darkmodehelper.cpp  darkmodehelper.h
src/gui/qt/resources/: pokerth.qrc  (+1 more)
src/gui/qt6-qml/: CMakeLists.txt  cflags.qrc  emotes.qrc  pokerth.cpp  pokerth.qml  qml.qrc  qmldir  qtquickcontrols2.conf
src/net/: asioreceivebuffer.cpp  asiosendbuffer.cpp  asiosendbuffer.h  chatcleanermanager.h  clientcontext.cpp  clientcontext.h  clientstate.cpp  clientstate.h  clientthread.cpp  clientthread.h  discordwebhook.cpp  discordwebhook.h  downloadhelper.cpp  netpacket.cpp  senderhelper.cpp  senderhelper.h  serveraccepthelper.h  serveracceptwebhelper.cpp  serveracceptwebhelper.h  serveradminbot.h  serverbanmanager.h  servergame.cpp  servergame.h  servergamestate.cpp  servergamestate.h  serverlobbybot.h  serverlobbythread.cpp  serverlobbythread.h  servermanager.cpp  servermanager.h  servermanagerfactoryserver.cpp  sessiondata.cpp  sessiondata.h  sessionmanager.cpp  sessionmanager.h  transferdata.h  transferhelper.cpp  uploadhelper.cpp  websocket_defs.h
src/net/common/: asioreceivebuffer.cpp  asiosendbuffer.cpp  chatcleanermanager.cpp  clientstate.cpp  clientthread.cpp  downloaderthread.cpp  serveracceptwebhelper.cpp  serveradminbot.cpp  serverbanmanager.cpp  servergame.cpp  servergamestate.cpp  serverlobbybot.cpp  serverlobbythread.cpp  servermanager.cpp  sessiondata.cpp  transferhelper.cpp  uploaderthread.cpp  uploadhelper.cpp
(+284 files in other folders)
